--- a/snow/snow.html
+++ b/snow/snow.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+	    @import url("https://fonts.googleapis.com/css2?family=Neonderthaw&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Allerta+Stencil&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Megrim&display=swap");
         body {
 	margin: 0;
 	background-color: #1d1d2b;
 	overflow: hidden;
+		background: url("https://images.unsplash.com/photo-1524334228333-0f6db392f8a1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1920&q=80")
+    no-repeat center center;
+  background-size: cover;
+  overflow: hidden;
 }
 .demo {
 	position: absolute;
@@ -52,7 +59,9 @@
 <body>
     <canvas></canvas>
     <div class="demo">
-	    <h1 class="new-year blue">Happy New Year</h1>
+	    <div class="heading">
+	      <h1 class="new-year blue">Happy New Year</h1>
+	    </div>
 	    <img src="snow-1.jpg">
     </div>
 </body>
