--- a/snow/snow.html
+++ b/snow/snow.html
@@ -28,6 +28,12 @@
 	justify-content: center;
 	align-items: center;
 }
+.new-year {
+	font-size: 3rem;
+	letter-spacing: 5px;
+	margin-bottom: 0;
+	font-family: "Megrim", cursive, sans-serif;
+}
 .demo img {
 	max-width: 100%;
 	height: auto;
@@ -59,10 +65,12 @@
 <body>
     <canvas></canvas>
     <div class="demo">
+	    <div class="demo-inner">
 	    <div class="heading">
 	      <h1 class="new-year blue">Happy New Year</h1>
 	    </div>
 	    <img src="snow-1.jpg">
+	    </div>
     </div>
 </body>
 <script>
