--- a/snow/snow.html
+++ b/snow/snow.html
@@ -17,6 +17,12 @@
   background-size: cover;
   overflow: hidden;
 }
+.heading {
+	margin-block-end: 50px;
+}
+.demo-inner {
+	text-align: center;
+}
 .demo {
 	position: absolute;
 	top: 0;
@@ -40,10 +46,11 @@
 	width: 320px;
 	border-radius: 25px;
 	box-shadow: 0 0 0px #fff, 0 0 14px #fff, 0 0 8px #0ba9ca, 0 0 0px #0ba9ca, 0 0 2px #0ba9ca, 0 0 20px #0ba9ca;
-	animation: blink 1.7s infinite alternate;
+	animation: blink 1.2s infinite alternate;
 }
 .blue{
 	text-shadow: 0 0 1px #0ba9ca, 0 0 12px #0ba9ca, 0 0 20px #0ba9ca, 0 0 20px #0ba9ca, 0 0 20px #0ba9ca;
+	animation: blink 1.2s infinite alternate;
 }
 @-webkit-keyframes blink {
   100% {
