--- a/snow/snow.html
+++ b/snow/snow.html
@@ -67,6 +67,7 @@
 	text-shadow: 0 0 5px #0ba9ca, 0 0 25px #0ba9ca, 0 0 50px #0ba9ca, 0 0 100px #0ba9ca, 0 0 200px #0ba9ca;
   }
 }
+@media only screen and (max-width: 479px) {.demo img {width: 240px;}}
     </style>
 </head>
 <body>
