--- a/snow/snow.html
+++ b/snow/snow.html
@@ -50,13 +50,12 @@
 }
 .blue{
 	text-shadow: 0 0 1px #0ba9ca, 0 0 12px #0ba9ca, 0 0 20px #0ba9ca, 0 0 20px #0ba9ca, 0 0 20px #0ba9ca;
-	animation: blink 1.2s infinite alternate;
+	animation: blinktext 1.2s infinite alternate;
 }
 @-webkit-keyframes blink {
   100% {
     box-shadow: 0 0 3px #fff, 0 0 10px #fff, 0 0 12px #fff, 0 0 18px #0ba9ca,
       0 0 22px #0ba9ca, 0 0 35px #0ba9ca;
-	text-shadow: 0 0 5px #0ba9ca, 0 0 25px #0ba9ca, 0 0 50px #0ba9ca, 0 0 100px #0ba9ca, 0 0 200px #0ba9ca;
   }
 }
 
@@ -64,6 +63,16 @@
 	100% {
     box-shadow: 0 0 3px #fff, 0 0 10px #fff, 0 0 12px #fff, 0 0 18px #0ba9ca,
       0 0 22px #0ba9ca, 0 0 35px #0ba9ca;
+  }
+}
+@-webkit-keyframes blinktext {
+  100% {
+	text-shadow: 0 0 5px #0ba9ca, 0 0 25px #0ba9ca, 0 0 50px #0ba9ca, 0 0 100px #0ba9ca, 0 0 200px #0ba9ca;
+  }
+}
+
+@keyframes blinktext {
+	100% {
 	text-shadow: 0 0 5px #0ba9ca, 0 0 25px #0ba9ca, 0 0 50px #0ba9ca, 0 0 100px #0ba9ca, 0 0 200px #0ba9ca;
   }
 }
