--- a/webworld_website/index.html
+++ b/webworld_website/index.html
@@ -156,7 +156,7 @@
                                         <span class="web-common-tagline">Discover Our Company</span>
                                     </div>
                                     <div class="web-common-heading-title">
-                                        <h2 class="web-common-title">We've been thriving in 38 years</h2>
+                                        <h2 class="web-common-title">We've been thriving in year</h2>
                                     </div>
                                 </div>
 							</div>
